update bug score

--- a/form-anak.html
+++ b/form-anak.html
@@ -30,7 +30,7 @@
         <div class="container">
           <div class="d-flex flex-row bd-highlight mb-3">
             <div class="icon kembali p-2 bd-highlight">
-              <a href="/"><i class="fa-solid fa-arrow-left"></i></a>
+              <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
               <span>Kembali</span>
             </div>
           </div>
@@ -110,7 +110,7 @@
                               <div class="d-flex flex-row bd-highlight mb-3">
                                 <div class="p-3 bd-highlight"></div>
                                 <div class="p-2 bd-highlight">
-                                  <input type="number" class="form-control" id="num1" num="num1" placeholder="isikan skor. contoh : 0">
+                                  <input type="number" class="form-control" id="num1" num="num1" placeholder="isikan skor. contoh : 0" max="1" min="0">
                                 </div>
                               </div>
                               <hr>
@@ -129,7 +129,7 @@
                               <div class="d-flex flex-row bd-highlight mb-3">
                                 <div class="p-3 bd-highlight"></div>
                                 <div class="p-2 bd-highlight">
-                                  <input type="number" class="form-control" id="num2" num="num2" placeholder="isikan skor. contoh : 0">
+                                  <input type="number" class="form-control" id="num2" num="num2" placeholder="isikan skor. contoh : 0" max="1" min="0">
                                 </div>
                               </div>
                               <hr>
@@ -149,7 +149,7 @@
                               <div class="d-flex flex-row bd-highlight mb-3">
                                 <div class="p-3 bd-highlight"></div>
                                 <div class="p-2 bd-highlight">
-                                  <input type="number" class="form-control" id="num3" name="num3" placeholder="isikan skor. contoh : 0">
+                                  <input type="number" class="form-control" id="num3" name="num3" placeholder="isikan skor. contoh : 0" max="1" min="0">
                                 </div>
                               </div>
                               <hr>
@@ -167,7 +167,7 @@
                               <div class="d-flex flex-row bd-highlight mb-3">
                                 <div class="p-3 bd-highlight"></div>
                                 <div class="p-2 bd-highlight">
-                                  <input type="number" class="form-control" id="num4" name="num4" placeholder="isikan skor. contoh : 0">
+                                  <input type="number" class="form-control" id="num4" name="num4" placeholder="isikan skor. contoh : 0" max="1" min="0">
                                 </div>
                               </div>
                               <table class="table table-bordered table-striped">
@@ -241,7 +241,7 @@
                                 <p class="komentar"></p>
                               </div>
                               <div class="btns-group text-md-end">
-                                <a href="/" class="btn btn-next btn-danger shadow lift me-1 mb-3">Selesai</a>
+                                <a href="index.html" class="btn btn-next btn-danger shadow lift me-1 mb-3">Selesai</a>
                               </div>
                             </div>
                             
@@ -285,7 +285,7 @@
       <script src="src/js/process.js"></script>
 
       <!-- Jumlah Skor -->
-      <script src="src/js/skor.js"></script>
+      <script src="src/js/skoranak.js"></script>
 
       <!-- Font Awesome -->
       <script src="https://kit.fontawesome.com/b356ad9dc8.js" crossorigin="anonymous"></script>
