--- a/form-anak.html
+++ b/form-anak.html
@@ -110,7 +110,7 @@
                               <div class="d-flex flex-row bd-highlight mb-3">
                                 <div class="p-3 bd-highlight"></div>
                                 <div class="p-2 bd-highlight">
-                                  <input type="number" class="form-control" id="num1" num="num1" placeholder="isikan skor. contoh : 0" max="1" min="0">
+                                  <input type="number" class="form-control custom-number" id="num1" num="num1" placeholder="isikan skor. contoh : 0" max="1" min="0">
                                 </div>
                               </div>
                               <hr>
@@ -129,7 +129,7 @@
                               <div class="d-flex flex-row bd-highlight mb-3">
                                 <div class="p-3 bd-highlight"></div>
                                 <div class="p-2 bd-highlight">
-                                  <input type="number" class="form-control" id="num2" num="num2" placeholder="isikan skor. contoh : 0" max="1" min="0">
+                                  <input type="number" class="form-control custom-number" id="num2" num="num2" placeholder="isikan skor. contoh : 0" max="1" min="0">
                                 </div>
                               </div>
                               <hr>
@@ -149,7 +149,7 @@
                               <div class="d-flex flex-row bd-highlight mb-3">
                                 <div class="p-3 bd-highlight"></div>
                                 <div class="p-2 bd-highlight">
-                                  <input type="number" class="form-control" id="num3" name="num3" placeholder="isikan skor. contoh : 0" max="1" min="0">
+                                  <input type="number" class="form-control custom-number" id="num3" name="num3" placeholder="isikan skor. contoh : 0" max="1" min="0">
                                 </div>
                               </div>
                               <hr>
@@ -167,7 +167,7 @@
                               <div class="d-flex flex-row bd-highlight mb-3">
                                 <div class="p-3 bd-highlight"></div>
                                 <div class="p-2 bd-highlight">
-                                  <input type="number" class="form-control" id="num4" name="num4" placeholder="isikan skor. contoh : 0" max="1" min="0">
+                                  <input type="number" class="form-control custom-number" id="num4" name="num4" placeholder="isikan skor. contoh : 0" max="1" min="0">
                                 </div>
                               </div>
                               <table class="table table-bordered table-striped">
