--- a/form-lansia.html
+++ b/form-lansia.html
@@ -125,7 +125,7 @@
                               <div class="d-flex flex-row bd-highlight mb-3">
                                 <div class="p-3 bd-highlight"></div>
                                 <div class="p-2 bd-highlight">
-                                  <input type="number" class="form-control" id="num1" num="num1" placeholder="isikan skor. contoh : 0" max="2" min="0">
+                                  <input type="number" class="form-control custom-number" id="num1" num="num1" placeholder="isikan skor. contoh : 0" max="2" min="0">
                                 </div>
                               </div>
                               <hr>
@@ -145,7 +145,7 @@
                               <div class="d-flex flex-row bd-highlight mb-3">
                                 <div class="p-3 bd-highlight"></div>
                                 <div class="p-2 bd-highlight">
-                                  <input type="number" class="form-control" id="num2" num="num2" placeholder="isikan skor. contoh : 0" max="3" min="0">
+                                  <input type="number" class="form-control custom-number" id="num2" num="num2" placeholder="isikan skor. contoh : 0" max="3" min="0">
                                 </div>
                               </div>
                               <hr>
@@ -164,7 +164,7 @@
                               <div class="d-flex flex-row bd-highlight mb-3">
                                 <div class="p-3 bd-highlight"></div>
                                 <div class="p-2 bd-highlight">
-                                  <input type="number" class="form-control" id="num3" name="num3" placeholder="isikan skor. contoh : 0" max="2" min="0">
+                                  <input type="number" class="form-control custom-number" id="num3" name="num3" placeholder="isikan skor. contoh : 0" max="2" min="0">
                                 </div>
                               </div>
                               <hr>
@@ -182,7 +182,7 @@
                               <div class="d-flex flex-row bd-highlight mb-3">
                                 <div class="p-3 bd-highlight"></div>
                                 <div class="p-2 bd-highlight">
-                                  <input type="number" class="form-control" id="num4" name="num4" placeholder="isikan skor. contoh : 0" max="2" min="0">
+                                  <input type="number" class="form-control custom-number" id="num4" name="num4" placeholder="isikan skor. contoh : 0" max="2" min="0">
                                 </div>
                               </div>
                               <hr>
@@ -201,7 +201,7 @@
                               <div class="d-flex flex-row bd-highlight mb-3">
                                 <div class="p-3 bd-highlight"></div>
                                 <div class="p-2 bd-highlight">
-                                  <input type="number" class="form-control" id="num5" name="num5" placeholder="isikan skor. contoh : 0" max="2" min="0">
+                                  <input type="number" class="form-control custom-number" id="num5" name="num5" placeholder="isikan skor. contoh : 0" max="2" min="0">
                                 </div>
                               </div>
                               <hr>
@@ -221,7 +221,7 @@
                               <div class="d-flex flex-row bd-highlight mb-3">
                                 <div class="p-3 bd-highlight"></div>
                                 <div class="p-2 bd-highlight">
-                                  <input type="number" class="form-control" id="num6" name="num6" placeholder="isikan skor. contoh : 0" max="3" min="0">
+                                  <input type="number" class="form-control custom-number" id="num6" name="num6" placeholder="isikan skor. contoh : 0" max="3" min="0">
                                 </div>
                               </div>
                               <hr>
