--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-4 mb-3">
-                    <div class="card" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">
+                    <div class="card card_profil" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">
                         <div class="img1"><img src="src/images/header/icons.jpg" alt=""></div>
                         <div class="img2"><img src="src/images/profile/ade.jpg" alt=""></div>
                         <div class="main-text">
@@ -247,7 +247,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">
+                    <div class="card card_profil" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">
                         <div class="img1"><img src="src/images/header/icons.jpg" alt=""></div>
                         <div class="img2"><img src="src/images/profile/dema.png" alt=""></div>
                         <div class="main-text">
@@ -272,7 +272,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">
+                    <div class="card card_profil" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">
                         <div class="img1"><img src="src/images/header/icons.jpg" alt=""></div>
                         <div class="img2"><img src="src/images/profile/cindy.jpg" alt=""></div>
                         <div class="main-text">
@@ -296,7 +296,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">
+                    <div class="card card_profil" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">
                         <div class="img1"><img src="src/images/header/icons.jpg" alt=""></div>
                         <div class="img2"><img src="src/images/profile/Nia.png" alt=""></div>
                         <div class="main-text">
@@ -320,7 +320,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 mb-3">
-                    <div class="card" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">
+                    <div class="card card_profil" data-aos="zoom-in" data-aos-delay="100" data-aos-duration="1000">
                         <div class="img1"><img src="src/images/header/icons.jpg" alt=""></div>
                         <div class="img2"><img src="src/images/profile/Ivo.png" alt=""></div>
                         <div class="main-text">
