--- a/form-anak.html
+++ b/form-anak.html
@@ -170,63 +170,65 @@
                                   <input type="number" class="form-control custom-number" id="num4" name="num4" placeholder="isikan skor. contoh : 0" max="1" min="0">
                                 </div>
                               </div>
-                              <table class="table table-bordered table-striped">
-                                <thead>
-                                  <tr>
-                                    <th scope="col" colspan="4">Daftar penyakit atau keadaan yang berisiko mengakibatkan malnutrisi</th>
-                                  </tr>
-                                </thead>
-                                <tbody>
-                                  <tr>
-                                    <th scope="row">1</th>
-                                    <td>Diare kronik (lebih dari 2 minggu)</td>
-                                    <th scope="row">9</th>
-                                    <td>Trauma</td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">2</th>
-                                    <td>Penyakit jantung bawaan</td>
-                                    <th scope="row">10</th>
-                                    <td>Luka bakar luas</td>                            
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">3</th>
-                                    <td>Infeksi <em>human immuno deficiency virus</em> (HIV)</td>
-                                    <th scope="row">11</th>
-                                    <td>Kelainan anatomi daerah mulut yang menyebabkan kesulitan makan (misal bibir sumbing)</td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">4</th>
-                                    <td>Penyakit hati kronik</td>
-                                    <th scope="row">12</th>
-                                    <td>Rencana atau pasca operasi mayor (misalnya : laparatomi, torakotomi)</td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">5</th>
-                                    <td>Penyakit ginjal kronik</td>
-                                    <th scope="row">13</th>
-                                    <td>Kelainan metabolik bawaan (<em>inborn error metabolism</em>)</td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">6</th>
-                                    <td>TB paru</td>
-                                    <th scope="row">14</th>
-                                    <td>Retardasi mental</td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">7</th>
-                                    <td>Pankreatitis</td>
-                                    <th scope="row">15</th>
-                                    <td>Keterlambatan perkembangan</td>
-                                  </tr>
-                                  <tr>
-                                    <th scope="row">8</th>
-                                    <td>Terpasang stoma</td>
-                                    <th scope="row">16</th>
-                                    <td>Lain-lain (berdasarkan pertimbangan dokter)</td>
-                                  </tr>
-                                </tbody>
-                              </table>
+                              <div class="table-responsive">
+                                <table class="table table-bordered table-striped">
+                                  <thead>
+                                    <tr>
+                                      <th scope="col" colspan="4">Daftar penyakit atau keadaan yang berisiko mengakibatkan malnutrisi</th>
+                                    </tr>
+                                  </thead>
+                                  <tbody>
+                                    <tr>
+                                      <th scope="row">1</th>
+                                      <td>Diare kronik (lebih dari 2 minggu)</td>
+                                      <th scope="row">9</th>
+                                      <td>Trauma</td>
+                                    </tr>
+                                    <tr>
+                                      <th scope="row">2</th>
+                                      <td>Penyakit jantung bawaan</td>
+                                      <th scope="row">10</th>
+                                      <td>Luka bakar luas</td>                            
+                                    </tr>
+                                    <tr>
+                                      <th scope="row">3</th>
+                                      <td>Infeksi <em>human immuno deficiency virus</em> (HIV)</td>
+                                      <th scope="row">11</th>
+                                      <td>Kelainan anatomi daerah mulut yang menyebabkan kesulitan makan (misal bibir sumbing)</td>
+                                    </tr>
+                                    <tr>
+                                      <th scope="row">4</th>
+                                      <td>Penyakit hati kronik</td>
+                                      <th scope="row">12</th>
+                                      <td>Rencana atau pasca operasi mayor (misalnya : laparatomi, torakotomi)</td>
+                                    </tr>
+                                    <tr>
+                                      <th scope="row">5</th>
+                                      <td>Penyakit ginjal kronik</td>
+                                      <th scope="row">13</th>
+                                      <td>Kelainan metabolik bawaan (<em>inborn error metabolism</em>)</td>
+                                    </tr>
+                                    <tr>
+                                      <th scope="row">6</th>
+                                      <td>TB paru</td>
+                                      <th scope="row">14</th>
+                                      <td>Retardasi mental</td>
+                                    </tr>
+                                    <tr>
+                                      <th scope="row">7</th>
+                                      <td>Pankreatitis</td>
+                                      <th scope="row">15</th>
+                                      <td>Keterlambatan perkembangan</td>
+                                    </tr>
+                                    <tr>
+                                      <th scope="row">8</th>
+                                      <td>Terpasang stoma</td>
+                                      <th scope="row">16</th>
+                                      <td>Lain-lain (berdasarkan pertimbangan dokter)</td>
+                                    </tr>
+                                  </tbody>
+                                </table>
+                              </div>
                               <hr>
                               <div class="btns-group text-center text-md-end">
                                 <a href="#" class="btn btn-prev btn-danger shadow lift me-1 mb-3">Kembali</a>
